--- a/config.properties
+++ b/config.properties
@@ -1,7 +1,12 @@
-#Sun Apr 27 18:13:51 EEST 2025
+#Mon Apr 28 15:01:02 EEST 2025
+slowSpeed=5
 screenWidth=1200
-hitboxTexture=reimu.png
+playerTexture=reimu.png
 screenHeight=800
-hitboxRadius=10
+keyLeft=A
+hitboxRadius=5
+keyUp=W
 playerSpeed=10
+keyDown=S
 bulletSpeed=20
+keyRight=D
