--- a/config.properties
+++ b/config.properties
@@ -1,12 +1,21 @@
-#Mon Apr 28 15:01:02 EEST 2025
-slowSpeed=5
-screenWidth=1200
+#Wed Apr 30 16:05:06 EEST 2025
+slowSpeed=1.0
+screenWidth=1280
+spinnerRotationSpeed=0.1063495408
 playerTexture=reimu.png
+vsync=true
 screenHeight=800
 keyLeft=A
-hitboxRadius=5
 keyUp=W
-playerSpeed=10
+maxFPS=0
+spinnerBulletCount=11
+playerSpeed=2.0
+bulletSpeed=4.0
+spinnerBulletSpeed=2.0
+sfxVolume=1.0
+spinnerFireInterval=100
+hitboxRadius=5
+backgroundDim=0.6
 keyDown=S
-bulletSpeed=20
+musicVolume=1.0
 keyRight=D
